fixed standalone media too large

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,7 +16,9 @@ div[style*='max-width: 630px'] {
 
 /* posts */
 div[style*='min(470px, 100vw)'],
-div[role="button"][aria-hidden="true"][tabindex="0"],
+/* this line below deforms the media content when seeing a standalone post (own url).
+it doesn't seem to affect anything right now. will delete later. */
+/* div[role="button"][aria-hidden="true"][tabindex="0"], */
 div._aamn,
 .x1i10hfl:not(.xjbqb8w) ._aagu{
 	width:700px !important;
